--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
-    "ngx-feedback": {
+    "ngx-feedback2": {
       "projectType": "library",
       "root": "projects/ngx-feedback",
       "sourceRoot": "projects/ngx-feedback/src",
