rename to ngx-feedback2

--- a/projects/ngx-feedback/package.json
+++ b/projects/ngx-feedback/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-feedback",
+  "name": "ngx-feedback2",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^9.0.2",
