--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "ngx-feedback2": {
@@ -42,6 +42,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ngx-feedback2"
+    }
+  },
+  "defaultProject": "ngx-feedback2",
+  "cli": {
+    "analytics": "259dadbb-afdf-49e2-ad78-c66b0740a601"
+  }
 }
