--- a/projects/ngx-feedback2/package.json
+++ b/projects/ngx-feedback2/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ngx-feedback2",
-  "version": "0.1.3",
+  "version": "1.1.0",
   "peerDependencies": {
     "@angular/common": "^9.0.2",
     "@angular/core": "^9.0.2",
-    "tslib": "^1.10.0"
+    "html2canvas": "^1.0.0-rc.5"
   }
 }
